Added project desc

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delivery Duration Prediction\n",
+    "\n",
+    "When a consumer places an order on DoorDash, we show the expected time of delivery. It is very important for DoorDash to get this right, as it has a big impact on consumer experience. In this exercise, you will build a model to predict the estimated time taken for a delivery.\n",
+    "\n",
+    "Concretely, for a given delivery you must predict the total delivery duration seconds , i.e., the time taken from\n",
+    "\n",
+    "__Start:__ the time consumer submits the order `(created_at)` to\n",
+    "<br>\n",
+    "__End:__ when the order will be delivered to the consumer `(actual_delivery_time)`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -453,46 +469,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "actual_total_delivery_duration                est_time_prep                  0.985830\n",
-       "total_onshift_dashers                         total_busy_dashers             0.941300\n",
-       "                                              total_outstanding_orders       0.934254\n",
-       "total_busy_dashers                            total_outstanding_orders       0.930907\n",
-       "estimated_store_to_consumer_driving_duration  est_time_non-prep              0.923236\n",
-       "estimated_order_place_duration                order_protocol__1.0            0.897732\n",
-       "total_items                                   num_distinct_items             0.757986\n",
-       "subtotal                                      num_distinct_items             0.683367\n",
-       "busy_to_outstanding                           dasher_total_to_outstanding    0.609299\n",
-       "total_items                                   subtotal                       0.557399\n",
-       "min_item_price                                max_item_price                 0.540671\n",
-       "subtotal                                      max_item_price                 0.507342\n",
-       "clean_store_primary_category__fast            order_protocol__4.0            0.490530\n",
-       "busy_to_onshift                               busy_to_outstanding            0.487935\n",
-       "total_outstanding_orders                      dasher_total_to_outstanding    0.480664\n",
-       "num_distinct_items                            min_item_price                 0.446961\n",
-       "market_id__2.0                                market_id__4.0                 0.404756\n",
-       "total_items                                   min_item_price                 0.389248\n",
-       "order_protocol__1.0                           order_protocol__3.0            0.373342\n",
-       "estimated_order_place_duration                order_protocol__3.0            0.363913\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calcAbsCorr_top_feature_pairs(train_df=train_df,n=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -529,30 +505,6 @@
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return feature_frame,vif_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\statsmodels\\stats\\outliers_influence.py:195: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  vif = 1. / (1. - r_squared_i)\n",
-      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\statsmodels\\stats\\outliers_influence.py:195: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  vif = 1. / (1. - r_squared_i)\n",
-      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\statsmodels\\stats\\outliers_influence.py:195: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  vif = 1. / (1. - r_squared_i)\n",
-      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\statsmodels\\regression\\linear_model.py:1736: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  return 1 - self.ssr/self.centered_tss\n"
-     ]
-    }
-   ],
-   "source": [
-    "trim_train_df,vif_features = removeFeature_VIF(feature_frame=train_df,target_feature='actual_total_delivery_duration',vif_limit=20)"
    ]
   },
   {
@@ -622,140 +574,6 @@
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return x_train_pca,x_test_pca"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA() \n",
-    "pca.fit(x_train_stdScale)\n",
-    "x_train_pca,x_test_pca = pca.transform(x_train_stdScale),pca.transform(x_test_stdScale)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7,\n",
-       " 95,\n",
-       " 0,\n",
-       " 4,\n",
-       " 9,\n",
-       " 13,\n",
-       " 92,\n",
-       " 99,\n",
-       " 98,\n",
-       " 96,\n",
-       " 89,\n",
-       " 91,\n",
-       " 100,\n",
-       " 66,\n",
-       " 62,\n",
-       " 19,\n",
-       " 39,\n",
-       " 28,\n",
-       " 35,\n",
-       " 84,\n",
-       " 54,\n",
-       " 84,\n",
-       " 73,\n",
-       " 55,\n",
-       " 94,\n",
-       " 22,\n",
-       " 73,\n",
-       " 21,\n",
-       " 30,\n",
-       " 75,\n",
-       " 49,\n",
-       " 22,\n",
-       " 77,\n",
-       " 17,\n",
-       " 27,\n",
-       " 50,\n",
-       " 81,\n",
-       " 40,\n",
-       " 87,\n",
-       " 81,\n",
-       " 87,\n",
-       " 69,\n",
-       " 45,\n",
-       " 31,\n",
-       " 38,\n",
-       " 58,\n",
-       " 44,\n",
-       " 29,\n",
-       " 70,\n",
-       " 67,\n",
-       " 70,\n",
-       " 86,\n",
-       " 26,\n",
-       " 41,\n",
-       " 41,\n",
-       " 59,\n",
-       " 15,\n",
-       " 20,\n",
-       " 47,\n",
-       " 78,\n",
-       " 53,\n",
-       " 64,\n",
-       " 80,\n",
-       " 76,\n",
-       " 42,\n",
-       " 72,\n",
-       " 23,\n",
-       " 34,\n",
-       " 16,\n",
-       " 16,\n",
-       " 48,\n",
-       " 85,\n",
-       " 32,\n",
-       " 94,\n",
-       " 82,\n",
-       " 55,\n",
-       " 101,\n",
-       " 101,\n",
-       " 91,\n",
-       " 100,\n",
-       " 93,\n",
-       " 51,\n",
-       " 99,\n",
-       " 3,\n",
-       " 96,\n",
-       " 12,\n",
-       " 92,\n",
-       " 98,\n",
-       " 3,\n",
-       " 13,\n",
-       " 0,\n",
-       " 2,\n",
-       " 8,\n",
-       " 5,\n",
-       " 6,\n",
-       " 90,\n",
-       " 19,\n",
-       " 90,\n",
-       " 52,\n",
-       " 10,\n",
-       " 36,\n",
-       " 18]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_comp = pca.components_.shape[0]\n",
-    "important_feature = [np.abs(pca.components_[i]).argmax() for i in range(n_comp)]\n",
-    "important_feature\n"
    ]
   }
  ],
