added new features, changed NaN outcomes

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from datetime import datetime as dt\n",
+    "from datetime import timedelta\n",
     "\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "from statsmodels.tools import add_constant\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,20 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
     "## add ratio features\n",
     "def addFeatures_ratios(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
-    "        historical_data['busy_to_onshift'] = historical_data['total_busy_dashers'] / historical_data['total_onshift_dashers']\n",
+    "        historical_data['busy_to_onshift'] = historical_data['total_onshift_dashers'] / historical_data['total_busy_dashers']\n",
+    "        historical_data['busy_to_onshift'].replace(to_replace=[np.inf,-np.inf],value=historical_data['total_onshift_dashers'][1],inplace=True)\n",
     "        historical_data['busy_to_outstanding'] = historical_data['total_busy_dashers'] / historical_data['total_outstanding_orders']\n",
-    "        historical_data['dasher_total_to_outstanding'] = historical_data['total_outstanding_orders'] / historical_data['total_busy_dashers']\n",
+    "        historical_data['busy_to_outstanding'].replace(to_replace=[np.inf,-np.inf,np.nan],value=0,inplace=True)\n",
+    "        historical_data['onshift_to_outstanding'] = historical_data['total_onshift_dashers'] / historical_data['total_outstanding_orders']\n",
+    "        historical_data['onshift_to_outstanding'].replace([np.inf,-np.inf],0,inplace=True)\n",
+    "        historical_data['est_prep_per_item'] = historical_data['est_time_prep'] / historical_data['num_distinct_items']\n",
     "        # replace infinite values with NaN to be dropped in the final cleaning step\n",
-    "        historical_data['busy_to_onshift'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
-    "        historical_data['busy_to_outstanding'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
-    "        historical_data['dasher_total_to_outstanding'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
+    "        #historical_data['busy_to_onshift'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
+    "        #historical_data['busy_to_outstanding'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
+    "        #historical_data['onshift_to_outstanding'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return historical_data"
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -297,6 +302,30 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>446.0</td>\n",
+       "      <td>690.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6.0</td>\n",
        "      <td>6900.0</td>\n",
@@ -344,89 +373,65 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1500.0</td>\n",
-       "      <td>1900.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>446.0</td>\n",
-       "      <td>338.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 103 columns</p>\n",
+       "<p>5 rows × 104 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   total_items  subtotal  num_distinct_items  min_item_price  max_item_price  \\\n",
        "0          4.0    3441.0                 4.0           557.0          1239.0   \n",
        "1          1.0    1900.0                 1.0          1400.0          1400.0   \n",
+       "2          1.0    1900.0                 1.0          1900.0          1900.0   \n",
        "3          6.0    6900.0                 5.0           600.0          1800.0   \n",
        "4          3.0    3900.0                 3.0          1100.0          1600.0   \n",
-       "5          3.0    5000.0                 3.0          1500.0          1900.0   \n",
        "\n",
        "   total_onshift_dashers  total_busy_dashers  total_outstanding_orders  \\\n",
        "0                   33.0                14.0                      21.0   \n",
        "1                    1.0                 2.0                       2.0   \n",
+       "2                    1.0                 0.0                       0.0   \n",
        "3                    1.0                 1.0                       2.0   \n",
        "4                    6.0                 6.0                       9.0   \n",
-       "5                    2.0                 2.0                       2.0   \n",
        "\n",
        "   estimated_order_place_duration  \\\n",
        "0                           446.0   \n",
        "1                           446.0   \n",
+       "2                           446.0   \n",
        "3                           446.0   \n",
        "4                           446.0   \n",
-       "5                           446.0   \n",
        "\n",
        "   estimated_store_to_consumer_driving_duration  ...  market_id__4.0  \\\n",
        "0                                         861.0  ...             0.0   \n",
        "1                                         690.0  ...             0.0   \n",
+       "2                                         690.0  ...             0.0   \n",
        "3                                         289.0  ...             0.0   \n",
        "4                                         650.0  ...             0.0   \n",
-       "5                                         338.0  ...             0.0   \n",
        "\n",
        "   market_id__5.0  market_id__6.0  order_protocol__1.0  order_protocol__2.0  \\\n",
        "0             0.0             0.0                  1.0                  0.0   \n",
        "1             0.0             0.0                  0.0                  1.0   \n",
+       "2             0.0             0.0                  1.0                  0.0   \n",
        "3             0.0             0.0                  1.0                  0.0   \n",
        "4             0.0             0.0                  1.0                  0.0   \n",
-       "5             0.0             0.0                  1.0                  0.0   \n",
        "\n",
        "   order_protocol__3.0  order_protocol__4.0  order_protocol__5.0  \\\n",
        "0                  0.0                  0.0                  0.0   \n",
        "1                  0.0                  0.0                  0.0   \n",
+       "2                  0.0                  0.0                  0.0   \n",
        "3                  0.0                  0.0                  0.0   \n",
        "4                  0.0                  0.0                  0.0   \n",
-       "5                  0.0                  0.0                  0.0   \n",
        "\n",
        "   order_protocol__6.0  order_protocol__7.0  \n",
        "0                  0.0                  0.0  \n",
        "1                  0.0                  0.0  \n",
+       "2                  0.0                  0.0  \n",
        "3                  0.0                  0.0  \n",
        "4                  0.0                  0.0  \n",
-       "5                  0.0                  0.0  \n",
        "\n",
-       "[5 rows x 103 columns]"
+       "[5 rows x 104 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,42 +476,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "actual_total_delivery_duration                est_time_prep                  0.985830\n",
-       "total_onshift_dashers                         total_busy_dashers             0.941300\n",
-       "                                              total_outstanding_orders       0.934254\n",
-       "total_busy_dashers                            total_outstanding_orders       0.930907\n",
-       "estimated_store_to_consumer_driving_duration  est_time_non-prep              0.923236\n",
-       "estimated_order_place_duration                order_protocol__1.0            0.897732\n",
-       "total_items                                   num_distinct_items             0.757986\n",
-       "subtotal                                      num_distinct_items             0.683367\n",
-       "busy_to_outstanding                           dasher_total_to_outstanding    0.609299\n",
-       "total_items                                   subtotal                       0.557399\n",
-       "min_item_price                                max_item_price                 0.540671\n",
-       "subtotal                                      max_item_price                 0.507342\n",
-       "clean_store_primary_category__fast            order_protocol__4.0            0.490530\n",
-       "busy_to_onshift                               busy_to_outstanding            0.487935\n",
-       "total_outstanding_orders                      dasher_total_to_outstanding    0.480664\n",
-       "num_distinct_items                            min_item_price                 0.446961\n",
-       "market_id__2.0                                market_id__4.0                 0.404756\n",
-       "total_items                                   min_item_price                 0.389248\n",
-       "order_protocol__1.0                           order_protocol__3.0            0.373342\n",
-       "estimated_order_place_duration                order_protocol__3.0            0.363913\n",
+       "actual_total_delivery_duration                est_time_prep               0.985815\n",
+       "total_onshift_dashers                         total_busy_dashers          0.941754\n",
+       "                                              total_outstanding_orders    0.934650\n",
+       "total_busy_dashers                            total_outstanding_orders    0.931305\n",
+       "estimated_store_to_consumer_driving_duration  est_time_non-prep           0.923086\n",
+       "estimated_order_place_duration                order_protocol__1.0         0.897616\n",
+       "total_items                                   num_distinct_items          0.758118\n",
+       "subtotal                                      num_distinct_items          0.682856\n",
+       "busy_to_onshift                               onshift_to_outstanding      0.666720\n",
+       "est_time_prep                                 est_prep_per_item           0.612211\n",
+       "actual_total_delivery_duration                est_prep_per_item           0.601926\n",
+       "total_items                                   subtotal                    0.557157\n",
+       "min_item_price                                max_item_price              0.541265\n",
+       "subtotal                                      max_item_price              0.507969\n",
+       "clean_store_primary_category__fast            order_protocol__4.0         0.489881\n",
+       "num_distinct_items                            est_prep_per_item           0.487415\n",
+       "busy_to_outstanding                           onshift_to_outstanding      0.467413\n",
+       "num_distinct_items                            min_item_price              0.446725\n",
+       "market_id__2.0                                market_id__4.0              0.402327\n",
+       "total_items                                   min_item_price              0.389282\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calcAbsCorr_top_feature_pairs(train_df=train_df,n=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble_train_df = train_df.drop(columns=['est_time_prep','est_time_non-prep','total_onshift_dashers','total_busy_dashers'])"
    ]
   },
   {
